--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls" }
 bevy-inspector-egui = "0.14"
 bevy_ecs_tilemap = "0.9.0"
 bevy_mod_picking = "0.11.0"
+iyes_loopless = "0.9.1"
 
 [dev-dependencies]
 anyhow = "1.0"
